project( C++_Primer_5ed_Answers )
cmake_minimum_required( VERSION 2.8.3 )

include_directories( ${CMAKE_SOURCE_DIR}/ )

include( CheckCXXCompilerFlag )
check_cxx_compiler_flag( "-std=c++11"   COMPILER_SUPPORTS_CXX11 )
check_cxx_compiler_flag( "-std=c++0x"   COMPILER_SUPPORTS_CXX0X )
if( COMPILER_SUPPORTS_CXX11 )
    if( CMAKE_COMPILER_IS_GNUCXX )
        set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11" )
    else()
        set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )
    endif()
elseif( COMPILER_SUPPORTS_CXX0X)
    set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x" )
else()
    # MSVC, On by default (if available)
endif()

add_subdirectory( ch01 )
add_subdirectory( ch02 )
add_subdirectory( ch03 )
add_subdirectory( ch04 )
add_subdirectory( ch05 )
add_subdirectory( ch06 )
add_subdirectory( ch07 )
add_subdirectory( ch08 )
add_subdirectory( ch09 )
add_subdirectory( ch10 )
add_subdirectory( ch11 )
add_subdirectory( ch12 )
add_subdirectory( ch13 )
add_subdirectory( ch14 )
add_subdirectory( ch15 )
add_subdirectory( ch16 )
add_subdirectory( ch17 )
add_subdirectory( ch18 )
add_subdirectory( ch19 )
